--- a/ace-user-app-web/src/main/resources/application.properties
+++ b/ace-user-app-web/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.application.name=ace-account-logic-api-web
-spring.profiles.include=mq,nacos
-server.port=8080
+spring.application.name=ace-user-app-web
