--- a/ace-user-app-logic-define/pom.xml
+++ b/ace-user-app-logic-define/pom.xml
@@ -48,6 +48,10 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ace</groupId>
+            <artifactId>ace-user-base-define</artifactId>
+        </dependency>
 
 
     </dependencies>
