--- a/ace-user-app-logic-api-core-junit/src/main/resources/application.properties
+++ b/ace-user-app-logic-api-core-junit/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=ace-user-app-logic-api-core-junit
-spring.profiles.include=tomcat,feign,nacos-discovery
+logging.level.ace.authentication.base.api.IdentityBaseApi=debug
+#feign.client.config.ace-authentication-base-api-web2.logger-level=full
+feign.client.config.default.logger-level=basic
